--- a/src/theme/DocSidebar/Desktop/styles.module.css
+++ b/src/theme/DocSidebar/Desktop/styles.module.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding-top: var(--ifm-navbar-height);
+    padding-top: 0;
     width: var(--doc-sidebar-width);
 
     /* Nested for higher specificity - overrides Logo component defaults.
